Views Calendar 5.x
==================

Version 2.0 dev
===============

- #282777 Try to make calendar creation in PHP4 more efficient to speed up creation of year calendar.

Version 2.0-rc2
===============

- #278391 Fix calendar popup position in Firefox.
- #278267 Add a theme for the jcalendar popup.
- #279169 Get rid of calendar_info() function in uninstall.
- #261610 Make sure delta value is available for jcalendar popup display.
- #255984 Make popup calendar date selector a configurable value.
- #251094 Make weekno a configurable value.
- #259127 Remove ajax back/next navigation on mini calendar, it's not working well enough.
- #247215 Make sure default calendar view and block are not triggered if there is no date field and add validation to the view to require a date field.
- #268668 Adjust comparison dates for timezone offsets to make sure multi-day events get split correctly.
- The cached ical feed cannot be used to store date objects, recreate them as needed.
- #234070 Fix broken ical title.
- #258501 Make sure calendar.inc is included when creating ical feed.
- #258515 Fix url in ical export.
- #266623 Protect against foreach() errors on empty ical feeds.
- PHP4 can't do comparisons of date objects, so alter calendar comparison code to compare formatted dates instead.
- #275213 Arguments were reversed in date_week_range().
- Remove as many dependencies as possible from install files and auto-enable necessary modules.
- #272263 Make sure empty ical stream doesn't get into cache.
- Cleanup calendar_info() values - we don't use granularity and only need one array for from/to.
- #261610 Prepare for a jQuery popup in the calendar by adding a unique id to the 'node' and altering the date theme to surpress all other dates if $node->date_id is set.
- #243172 Theme('calendar_empty') should be theme('calendar_empty_day'), patch by JohnAlbin.
- Clean up install file included files and include file paths, and auto-enable date_timezone and date_php4.