@@ -4,6 +4,7 @@ Views Calendar 5.x
 Version 2.0 dev
 ===============
 
+- #276421 Use farbtastic color picker to set calendar stripes, and start process of making stripes more customizable.
 - #282777 Try to make calendar creation in PHP4 more efficient to speed up creation of year calendar.
 
 Version 2.0-rc2
